--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<script src="./js/game.js"> </script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="./js/game.js" defer> </script>
+</head>
+<body>
+    <button class="option rock">Rock</button>
+    <button class="option paper">Paper</button>
+    <button class="option scissors">Scissors</button>
+</body>
+</html>
