Add match info to UI

--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     <script src="./js/game.js" defer> </script>
 </head>
 <body>
-    <button class="option rock">Rock</button>
-    <button class="option paper">Paper</button>
-    <button class="option scissors">Scissors</button>
+    <div class="main">
+
+        <button class="option rock">Rock</button>
+        <button class="option paper">Paper</button>
+        <button class="option scissors">Scissors</button>
+
+        <div class="matchInfo">
+            <div class="roundInfo"></div>
+            <div class="roundResult"></div>
+            <div class="score"></div>
+            <div class="matchResult"></div>
+        </div>
+
+    </div>
 </body>
 </html>
